--- a/Learn.IService/Learn.IService.csproj
+++ b/Learn.IService/Learn.IService.csproj
@@ -41,8 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IBaseService.cs" />
+    <Compile Include="IDepartmentService.cs" />
+    <Compile Include="IEmployeeService.cs" />
     <Compile Include="IRoleService.cs" />
-    <Compile Include="IUserInfoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
