--- a/Learn.Web/Learn.Web.csproj
+++ b/Learn.Web/Learn.Web.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>Learn.Web</RootNamespace>
     <AssemblyName>Learn.Web</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -140,8 +140,22 @@
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\css\bootstrap-theme.css" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\css\bootstrap-theme.min.css" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\css\bootstrap.css" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\css\bootstrap.min.css" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\js\bootstrap.js" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\js\bootstrap.min.js" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\js\npm.js" />
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\css\bootstrap-theme.css.map" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\css\bootstrap.css.map" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="scripts\bootstrap-3.3.2-dist\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
@@ -596,6 +610,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -615,6 +630,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="scripts\jquery-1.10.2.min.map" />
     <Content Include="scripts\jquery-easyui-1.5\themes\material\images\Thumbs.db" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -667,7 +683,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>6976</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:6976/</IISUrl>
+          <IISUrl>http://localhost/Learn.Web</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
