--- a/Learn.Data/Learn.Data.csproj
+++ b/Learn.Data/Learn.Data.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>201610161552028_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="PermissionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleRepository.cs" />
   </ItemGroup>
