--- a/Learn.IService/Learn.IService.csproj
+++ b/Learn.IService/Learn.IService.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IBaseService.cs" />
     <Compile Include="IDepartmentService.cs" />
     <Compile Include="IEmployeeService.cs" />
+    <Compile Include="IPermissionService.cs" />
     <Compile Include="IRoleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
