新增：左侧菜单

--- a/Learn.Web/Learn.Web.csproj
+++ b/Learn.Web/Learn.Web.csproj
@@ -627,6 +627,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\BaseController.cs" />
+    <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\OperationContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -655,6 +657,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Learn.Common\Learn.Common.csproj">
@@ -693,7 +696,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>6976</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
