--- a/Learn.Core/Learn.Core.csproj
+++ b/Learn.Core/Learn.Core.csproj
@@ -43,12 +43,14 @@
     <Compile Include="Domain\Department.cs" />
     <Compile Include="Domain\Employee.cs" />
     <Compile Include="Domain\EmpRoleRelationship.cs" />
+    <Compile Include="Domain\partialClass\Permission.cs" />
     <Compile Include="Domain\Permission.cs" />
     <Compile Include="Domain\Role.cs" />
     <Compile Include="Domain\RolePerRelationship.cs" />
     <Compile Include="Domain\UserInfo.cs" />
     <Compile Include="Domain\VipPermssion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeNode.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
